fixed css for table on mobile view

--- a/src/app/components/menu-tree/menu-tree.component.scss
+++ b/src/app/components/menu-tree/menu-tree.component.scss
@@ -3,7 +3,7 @@
     background-color: #444c65;
   }
 
-  .mat-flat-button {
+  .mat-icon-button {
     color: white;
   }
 }
