--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -22,6 +22,7 @@
     font-size: 2rem;
     line-height: 2.438rem;
     text-decoration: none;
+    padding-right: 1rem;
   }
 
   .hra-header {
@@ -31,7 +32,6 @@
     letter-spacing: -0.025em;
     line-height: 2.438rem;
     text-transform: uppercase;
-    padding-left: 1rem;
     text-decoration: none;
   }
 
@@ -61,6 +61,10 @@
 
     menu-tree {
       display: unset;
+    }
+
+    .hubmap-header {
+      display: none;
     }
   }
 }
